@@ -8,7 +8,8 @@ package cbot_checker;
 
 use strict;
 use warnings;
-
+use FindBin qw($Bin);
+use lib ( -d "$Bin/../lib/perl5" ? "$Bin/../lib/perl5" : "$Bin/../lib" );
 use Carp;
 use DateTime;
 use DateTime::Format::Strptime;
