@@ -53,28 +53,16 @@ has _label => (
     lazy_build => 1,
 );
 
-foreach my $attr ( qw( is_gaii is_hiseq is_cbot is_miseq ) ) {
-    has q{_} . $attr => (
-        reader     => $attr,
-        is         => 'ro',
-        isa        => 'Bool',
-        lazy_build => 1,
-    );
-}
-
-
 sub _build__instr_id {
     my ($self) = @_;
     return ( $self->ident() =~ m/^ (\d+) $/msx ) ? ( $1 + 0 ) : undef;
 }
-
 
 #We only need this if instr_id cannot be set from the --ident argument
 sub _build__instr_name {
     my ($self) = @_;
     return ( $self->instr_id() ? undef : $self->ident() );
 }
-
 
 sub _build__db_entry {
     my ($self) = @_;
@@ -100,7 +88,6 @@ sub _build__db_entry {
     return ( $instrument_rs->count() == 1 ) ? $instrument_rs->next() : undef;
 }
 
-
 sub _build__label {
     my ($self) = @_;
 
@@ -108,38 +95,14 @@ sub _build__label {
             $self->db_entry->id_instrument();
 }
 
-
-sub _build__is_gaii {
-    my ($self) = @_;
-
-    return ( $self->db_entry->instrument_format->model() eq 'HK' );
+sub model {
+    my $self = shift;
+    return $self->db_entry->instrument_format->model();
 }
-
-
-sub _build__is_hiseq {
-    my ($self) = @_;
-
-    return ( $self->db_entry->instrument_format->model() eq 'HiSeq' );
-}
-
-
-sub _build__is_miseq {
-    my ($self) = @_;
-
-    return ( $self->db_entry->instrument_format->model() eq 'MiSeq' );
-}
-
-sub _build__is_cbot {
-    my ($self) = @_;
-
-    return ( $self->db_entry->instrument_format->model() eq 'cBot' );
-}
-
 
 sub mysql_time_stamp {
     return strftime( '%F %T', localtime );
 }
-
 
 no Moose;
 __PACKAGE__->meta->make_immutable();
@@ -151,8 +114,7 @@ __END__
 
 =head1 NAME
 
-Monitor::Instrument - base class for modules that interrogate instruments for run
-information.
+Monitor::Instrument
 
 =head1 VERSION
 
@@ -160,11 +122,12 @@ information.
 
     C<<use Monitor::Instrument;
        my $obj = Monitor::Instrument->new_with_options();
-       warn $obj->is_gaii();>>
+       warn $obj->model();>>
 
 =head1 DESCRIPTION
 
-This is the superclass for npg_tracking's Monitor library.
+Base class for modules that interrogate instruments for run
+information.
 
 This class is written to support various scripts that monitor instruments. The
 scripts should be called with the argument --ident, and optionally, the
@@ -177,26 +140,11 @@ argument --dev
 
 Return a npg_tracking::Schema::Result::Instrument row for an instrument.
 
-=head2 is_gaii
-
-Return a boolean indicating if the instrument is a GA-II model.
-
-=head2 is_hiseq
-
-Return a boolean indicating if the instrument is a HiSeq model.
-
-=head2 is_miseq
-
-Return a boolean indicating if the instrument is a MiSeq model.
-
-=head2 is_cbot
-
-Return a boolean indicating if the instrument is a cBot model.
+=head2 model - instrument model
 
 =head2 mysql_time_stamp
 
 Return the current time in a format that can be inserted into a mysql table.
-
 
 =head1 CONFIGURATION AND ENVIRONMENT
 
