@@ -54,9 +54,6 @@ sub init {
   return 1;
 }
 
-
-
-
 sub current_instrument_formats {
   my $self = shift;
 
@@ -70,6 +67,12 @@ sub current_instrument_formats {
   }
 
   return $self->{'current_instrument_formats'};
+}
+
+sub instrument_formats_sorted {
+  my $self = shift;
+  my @if = sort { $a->model cmp $b->model} @{$self->instrument_formats};
+  return \@if;
 }
 
 sub current_instruments {
@@ -202,6 +205,10 @@ This method returns the instrument type the format is commonly known as if this 
 Returns a hash ref containing keys of current formats (which have current instruments associated) each pointing to an arrayref of their current instruments
 
   my $hCurrentInstrumentsByFormat = $oInstrumentFormat->current_instruments_by_format();
+
+=head2 instrument_formats_sorted
+
+  returns instrument format objects array sorted by model name
 
 =head1 DIAGNOSTICS
 
