@@ -25,10 +25,18 @@
   &middot;&middot;<a href="/cgi-bin/npg/run/?id_run_status_dict=20&id_instrument_format=all&id_instrument="><span class="npg_nbsp ">qc complete</span></a>&middot;&middot;
   </div>
 
- <div>
- <span class="medium_header">Instrument Types</span>
- &middot;&middot;<a href="/cgi-bin/npg/run/?id_run_status_dict=1&id_instrument_format=all" class="runs_active_selection">all</a>&middot;&middot;&middot;&middot;<a href="/cgi-bin/npg/run/?id_run_status_dict=1&id_instrument_format=10&id_instrument=" >HiSeq</a>&middot;&middot;&middot;&middot;<a href="/cgi-bin/npg/run/?id_run_status_dict=1&id_instrument_format=12&id_instrument=" >HiSeqX</a>&middot;&middot;&middot;&middot;<a href="/cgi-bin/npg/run/?id_run_status_dict=1&id_instrument_format=4&id_instrument=" >GAII</a>&middot;&middot;&middot;&middot;<a href="/cgi-bin/npg/run/?id_run_status_dict=1&id_instrument_format=11&id_instrument=" >MiSeq</a>&middot;&middot;
-  </div>
+<div>
+<span class="medium_header">Instrument Types</span>
+&middot;&middot;<a href="/cgi-bin/npg/run/?id_run_status_dict=1&id_instrument_format=all" class="runs_active_selection">all</a>&middot;&middot;
+ 
+ 
+ 
+         &middot;&middot;<a href="/cgi-bin/npg/run/?id_run_status_dict=1&id_instrument_format=4&id_instrument=" >GAII</a>&middot;&middot;
+         &middot;&middot;<a href="/cgi-bin/npg/run/?id_run_status_dict=1&id_instrument_format=10&id_instrument=" >HiSeq</a>&middot;&middot;
+         &middot;&middot;<a href="/cgi-bin/npg/run/?id_run_status_dict=1&id_instrument_format=12&id_instrument=" >HiSeqX</a>&middot;&middot;
+         &middot;&middot;<a href="/cgi-bin/npg/run/?id_run_status_dict=1&id_instrument_format=11&id_instrument=" >MiSeq</a>&middot;&middot;
+ 
+ </div>
  
  <div class="smaller_font_85">
  <span class="medium_header ">Page: </span>
